--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
   "devDependencies": {
     "gulp": "^3.8.11",
     "gulp-jade": "^1.0.0",
+    "gulp-notify": "^2.2.0",
     "gulp-sass": "^1.3.3",
     "gulp-server-livereload": "^1.2.4"
+  },
+  "dependencies": {
+    "gulp-minify-css": "^1.1.1"
   }
 }
